Refactoring OpeningHoursRepositoryTest for method  getRandomizedGroupEntitiesWithNameNotInList() to improve and fix code.